# poseidon2_folding_scheme

./: .gitignore  Cargo.toml  README.md  README.txt  main_check_poseidon_foldingscheme.txt  parameter_specification.py  poseidon2_rust_params.sage  report_simulator.js
circuits/: storage_batch_proof.circom
scripts/: setup_circuit.bat
src/: constants.rs  main.rs  poseidon2_gadget.rs
