[package]
name = "poseidon2_folding_scheme"
version = "0.1.0"
edition = "2021"

[dependencies]
# 🚨 Tắt tính năng Assembly mặc định để trình biên dịch của Windows đọc được
nova-snark = { version = "0.34.0", default-features = false } 
bellpepper-core = "0.4.0"
pasta_curves = "0.5.1"
ff = "0.13.0"
hex = "0.4.3"
lazy_static = "1.4.0"
rand = "0.8"
blake3 = "1.5"